--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -11,6 +11,7 @@ allow 103.251.167.10;
 allow 103.251.167.20;
 allow 104.168.144.253;
 allow 104.192.3.74;
+allow 104.194.87.207;
 allow 104.219.236.100;
 allow 104.244.72.115;
 allow 104.244.72.132;
@@ -826,12 +827,12 @@ allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
+allow 208.85.20.67;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
 allow 209.141.45.141;
 allow 209.141.46.203;
-allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.54.218;
@@ -850,7 +851,6 @@ allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
-allow 217.64.151.73;
 allow 23.129.64.171;
 allow 23.129.64.172;
 allow 23.129.64.173;
@@ -895,7 +895,6 @@ allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
-allow 23.155.8.104;
 allow 23.184.48.254;
 allow 23.184.48.78;
 allow 23.236.122.193;
@@ -926,7 +925,6 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
-allow 2602:2e5::104;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
@@ -1135,6 +1133,30 @@ allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:129:2098::1;
 allow 2a04:52c0:130:896e::1;
+allow 2a04:52c0:2000:518::133;
+allow 2a04:52c0:2000:518::134;
+allow 2a04:52c0:2000:518::135;
+allow 2a04:52c0:2000:518::136;
+allow 2a04:52c0:2000:518::137;
+allow 2a04:52c0:2000:518::138;
+allow 2a04:52c0:2000:518::139;
+allow 2a04:52c0:2000:518::140;
+allow 2a04:52c0:2000:518::141;
+allow 2a04:52c0:2000:518::142;
+allow 2a04:52c0:2000:518::143;
+allow 2a04:52c0:2000:518::144;
+allow 2a04:52c0:2000:518::145;
+allow 2a04:52c0:2000:518::146;
+allow 2a04:52c0:2000:518::147;
+allow 2a04:52c0:2000:518::148;
+allow 2a04:52c0:2000:518::149;
+allow 2a04:52c0:2000:518::150;
+allow 2a04:52c0:2000:518::151;
+allow 2a04:52c0:2000:518::152;
+allow 2a04:52c0:2000:518::153;
+allow 2a04:52c0:2000:518::154;
+allow 2a04:52c0:2000:518::155;
+allow 2a04:52c0:2000:518::156;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
@@ -1609,6 +1631,30 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
+allow 5.2.68.133;
+allow 5.2.68.134;
+allow 5.2.68.135;
+allow 5.2.68.136;
+allow 5.2.68.137;
+allow 5.2.68.138;
+allow 5.2.68.139;
+allow 5.2.68.140;
+allow 5.2.68.141;
+allow 5.2.68.142;
+allow 5.2.68.143;
+allow 5.2.68.144;
+allow 5.2.68.145;
+allow 5.2.68.146;
+allow 5.2.68.147;
+allow 5.2.68.148;
+allow 5.2.68.149;
+allow 5.2.68.150;
+allow 5.2.68.151;
+allow 5.2.68.152;
+allow 5.2.68.153;
+allow 5.2.68.154;
+allow 5.2.68.155;
+allow 5.2.68.156;
 allow 5.2.72.110;
 allow 5.2.79.190;
 allow 5.34.182.203;
