--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -11,6 +11,7 @@ set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.251.167.20;
 set_real_ip_from 104.168.144.253;
 set_real_ip_from 104.192.3.74;
+set_real_ip_from 104.194.87.207;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
@@ -826,12 +827,12 @@ set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.124.193;
 set_real_ip_from 205.185.127.231;
+set_real_ip_from 208.85.20.67;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.37.94;
 set_real_ip_from 209.141.45.141;
 set_real_ip_from 209.141.46.203;
-set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.54.218;
@@ -850,7 +851,6 @@ set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
-set_real_ip_from 217.64.151.73;
 set_real_ip_from 23.129.64.171;
 set_real_ip_from 23.129.64.172;
 set_real_ip_from 23.129.64.173;
@@ -895,7 +895,6 @@ set_real_ip_from 23.154.177.6;
 set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
-set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.254;
 set_real_ip_from 23.184.48.78;
 set_real_ip_from 23.236.122.193;
@@ -926,7 +925,6 @@ set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
-set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:fc24:10:61b::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:9fef::1;
@@ -1135,6 +1133,30 @@ set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:129:2098::1;
 set_real_ip_from 2a04:52c0:130:896e::1;
+set_real_ip_from 2a04:52c0:2000:518::133;
+set_real_ip_from 2a04:52c0:2000:518::134;
+set_real_ip_from 2a04:52c0:2000:518::135;
+set_real_ip_from 2a04:52c0:2000:518::136;
+set_real_ip_from 2a04:52c0:2000:518::137;
+set_real_ip_from 2a04:52c0:2000:518::138;
+set_real_ip_from 2a04:52c0:2000:518::139;
+set_real_ip_from 2a04:52c0:2000:518::140;
+set_real_ip_from 2a04:52c0:2000:518::141;
+set_real_ip_from 2a04:52c0:2000:518::142;
+set_real_ip_from 2a04:52c0:2000:518::143;
+set_real_ip_from 2a04:52c0:2000:518::144;
+set_real_ip_from 2a04:52c0:2000:518::145;
+set_real_ip_from 2a04:52c0:2000:518::146;
+set_real_ip_from 2a04:52c0:2000:518::147;
+set_real_ip_from 2a04:52c0:2000:518::148;
+set_real_ip_from 2a04:52c0:2000:518::149;
+set_real_ip_from 2a04:52c0:2000:518::150;
+set_real_ip_from 2a04:52c0:2000:518::151;
+set_real_ip_from 2a04:52c0:2000:518::152;
+set_real_ip_from 2a04:52c0:2000:518::153;
+set_real_ip_from 2a04:52c0:2000:518::154;
+set_real_ip_from 2a04:52c0:2000:518::155;
+set_real_ip_from 2a04:52c0:2000:518::156;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
@@ -1609,6 +1631,30 @@ set_real_ip_from 5.255.99.124;
 set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
+set_real_ip_from 5.2.68.133;
+set_real_ip_from 5.2.68.134;
+set_real_ip_from 5.2.68.135;
+set_real_ip_from 5.2.68.136;
+set_real_ip_from 5.2.68.137;
+set_real_ip_from 5.2.68.138;
+set_real_ip_from 5.2.68.139;
+set_real_ip_from 5.2.68.140;
+set_real_ip_from 5.2.68.141;
+set_real_ip_from 5.2.68.142;
+set_real_ip_from 5.2.68.143;
+set_real_ip_from 5.2.68.144;
+set_real_ip_from 5.2.68.145;
+set_real_ip_from 5.2.68.146;
+set_real_ip_from 5.2.68.147;
+set_real_ip_from 5.2.68.148;
+set_real_ip_from 5.2.68.149;
+set_real_ip_from 5.2.68.150;
+set_real_ip_from 5.2.68.151;
+set_real_ip_from 5.2.68.152;
+set_real_ip_from 5.2.68.153;
+set_real_ip_from 5.2.68.154;
+set_real_ip_from 5.2.68.155;
+set_real_ip_from 5.2.68.156;
 set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
