--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -126,7 +126,6 @@ set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
-set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:fc24:10:61b::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:9fef::1;
@@ -334,6 +333,30 @@ set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:129:2098::1;
 set_real_ip_from 2a04:52c0:130:896e::1;
+set_real_ip_from 2a04:52c0:2000:518::133;
+set_real_ip_from 2a04:52c0:2000:518::134;
+set_real_ip_from 2a04:52c0:2000:518::135;
+set_real_ip_from 2a04:52c0:2000:518::136;
+set_real_ip_from 2a04:52c0:2000:518::137;
+set_real_ip_from 2a04:52c0:2000:518::138;
+set_real_ip_from 2a04:52c0:2000:518::139;
+set_real_ip_from 2a04:52c0:2000:518::140;
+set_real_ip_from 2a04:52c0:2000:518::141;
+set_real_ip_from 2a04:52c0:2000:518::142;
+set_real_ip_from 2a04:52c0:2000:518::143;
+set_real_ip_from 2a04:52c0:2000:518::144;
+set_real_ip_from 2a04:52c0:2000:518::145;
+set_real_ip_from 2a04:52c0:2000:518::146;
+set_real_ip_from 2a04:52c0:2000:518::147;
+set_real_ip_from 2a04:52c0:2000:518::148;
+set_real_ip_from 2a04:52c0:2000:518::149;
+set_real_ip_from 2a04:52c0:2000:518::150;
+set_real_ip_from 2a04:52c0:2000:518::151;
+set_real_ip_from 2a04:52c0:2000:518::152;
+set_real_ip_from 2a04:52c0:2000:518::153;
+set_real_ip_from 2a04:52c0:2000:518::154;
+set_real_ip_from 2a04:52c0:2000:518::155;
+set_real_ip_from 2a04:52c0:2000:518::156;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
