--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -148,7 +148,11 @@ allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.26.159.157;
 allow 156.229.232.101;
+allow 156.229.232.104;
+allow 156.229.232.108;
+allow 156.229.232.115;
 allow 156.229.232.54;
+allow 156.229.232.98;
 allow 156.229.233.92;
 allow 158.220.123.219;
 allow 158.69.252.116;
@@ -825,7 +829,6 @@ allow 205.185.119.35;
 allow 205.185.121.170;
 allow 205.185.123.93;
 allow 205.185.124.176;
-allow 205.185.124.193;
 allow 205.185.127.231;
 allow 208.85.20.67;
 allow 209.141.32.181;
@@ -833,6 +836,7 @@ allow 209.141.32.198;
 allow 209.141.37.94;
 allow 209.141.45.141;
 allow 209.141.46.203;
+allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.54.218;
@@ -895,6 +899,7 @@ allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
+allow 23.155.8.104;
 allow 23.184.48.254;
 allow 23.184.48.78;
 allow 23.236.122.193;
@@ -925,6 +930,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
@@ -955,7 +961,6 @@ allow 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 allow 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 allow 2605:6400:20:117a:2605:6400:20:117a;
 allow 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
-allow 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 allow 2605:6400:20:2417::69;
 allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 allow 2605:6400:20:482:3920:1829:1839:1293;
@@ -1122,7 +1127,6 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1163,7 +1167,11 @@ allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
+allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
+allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -1602,7 +1610,6 @@ allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.102.89;
@@ -1754,6 +1761,7 @@ allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.185.165.211;
 allow 93.95.228.205;
+allow 93.95.230.165;
 allow 93.95.231.88;
 allow 93.99.104.128;
 allow 93.99.104.18;
