--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -126,6 +126,7 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
@@ -156,7 +157,6 @@ deny 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 deny 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 deny 2605:6400:20:117a:2605:6400:20:117a;
 deny 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
-deny 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 deny 2605:6400:20:2417::69;
 deny 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 deny 2605:6400:20:482:3920:1829:1839:1293;
@@ -322,7 +322,6 @@ deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -363,7 +362,11 @@ deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
+deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
+deny 2a05:b0c7:67c6::1;
+deny 2a05:b0c7:6949::1;
+deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
