--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -125,10 +125,11 @@ allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
+allow 141.147.97.190;
+allow 141.98.11.62;
 allow 142.171.12.88;
 allow 142.44.133.81;
 allow 142.44.234.69;
-allow 144.172.118.161;
 allow 144.172.118.4;
 allow 144.172.118.55;
 allow 144.172.118.73;
@@ -147,6 +148,7 @@ allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.26.159.157;
 allow 156.229.232.101;
+allow 156.229.232.104;
 allow 156.229.232.108;
 allow 156.229.232.115;
 allow 156.229.232.54;
@@ -824,6 +826,7 @@ allow 205.185.116.34;
 allow 205.185.117.149;
 allow 205.185.119.35;
 allow 205.185.121.170;
+allow 205.185.121.177;
 allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.127.231;
@@ -831,7 +834,9 @@ allow 208.85.20.67;
 allow 209.135.168.90;
 allow 209.141.32.181;
 allow 209.141.32.198;
+allow 209.141.34.15;
 allow 209.141.37.94;
+allow 209.141.40.68;
 allow 209.141.45.141;
 allow 209.141.46.203;
 allow 209.141.51.180;
@@ -839,6 +844,7 @@ allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.54.218;
 allow 209.141.55.26;
+allow 209.141.58.254;
 allow 209.141.60.219;
 allow 209.141.61.52;
 allow 212.21.66.6;
@@ -852,6 +858,7 @@ allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
+allow 217.199.199.250;
 allow 23.129.64.171;
 allow 23.129.64.172;
 allow 23.129.64.173;
@@ -870,6 +877,7 @@ allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
+allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -898,7 +906,6 @@ allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.254;
 allow 23.184.48.78;
-allow 23.236.122.193;
 allow 23.94.211.25;
 allow 23.94.36.167;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
@@ -940,6 +947,7 @@ allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fef9:100:1100::199;
+allow 2604:2dc0:101:200::53c8;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
@@ -1045,6 +1053,7 @@ allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
+allow 2a00:4d80::1;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
@@ -1166,6 +1175,7 @@ allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
+allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
@@ -1494,6 +1504,7 @@ allow 2a12:a800:2:1:45:80:158:205;
 allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
+allow 2a12:de40:33:455::;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
@@ -1511,6 +1522,7 @@ allow 37.48.70.156;
 allow 37.77.56.238;
 allow 38.242.242.246;
 allow 38.97.116.244;
+allow 40.160.3.1;
 allow 45.11.229.132;
 allow 45.11.59.28;
 allow 45.118.133.44;
@@ -1573,7 +1585,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1670,6 +1681,7 @@ allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
 allow 5.79.66.19;
+allow 5.83.134.29;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.84.146;
@@ -1726,6 +1738,8 @@ allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
 allow 89.147.108.63;
+allow 89.147.108.90;
+allow 89.147.110.118;
 allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
@@ -1757,8 +1771,10 @@ allow 92.246.138.145;
 allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.185.165.211;
+allow 93.95.228.125;
 allow 93.95.228.205;
 allow 93.95.230.165;
+allow 93.95.231.14;
 allow 93.95.231.88;
 allow 93.99.104.128;
 allow 93.99.104.18;
@@ -1771,7 +1787,6 @@ allow 94.16.115.121;
 allow 94.16.116.81;
 allow 94.16.121.91;
 allow 94.177.106.236;
-allow 94.177.106.54;
 allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.72.103.33;
