--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -140,6 +140,7 @@ deny 2602:fc24:19:30::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fef9:100:1100::199;
+deny 2604:2dc0:101:200::53c8;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:6600:0:42::2;
 deny 2604:b480:3:6::2;
@@ -244,6 +245,7 @@ deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
+deny 2a00:4d80::1;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
@@ -365,6 +367,7 @@ deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
+deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
@@ -693,4 +696,5 @@ deny 2a12:a800:2:1:45:80:158:205;
 deny 2a12:a800:2:1:45:80:158:23;
 deny 2a12:a800:2:1:45:80:158:27;
 deny 2a12:a800:2:1:45:80:158:69;
+deny 2a12:de40:33:455::;
 deny 2a13:d207:0:461::1;
